--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">PhotoSearchTv</string>
     <string name="search_icon_description">Search Icon</string>
+    <string name="author_name_and_date">%s / %s</string>
+    <string name="list_default_title">Trending now on Flick</string>
 </resources>
