--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,5 +2,5 @@
     <string name="app_name">PhotoSearchTv</string>
     <string name="search_icon_description">Search Icon</string>
     <string name="author_name_and_date">%s / %s</string>
-    <string name="list_default_title">Trending now on Flicker</string>
+    <string name="list_default_title">Trending now on Flickr</string>
 </resources>
